# effective-doodle

./: .env.example  .env_gog  .pre-commit-config.yaml  01-vision-and-architecture-v1.1.md  02-decision-log.md  03-backlog.md  04-data-model.md  05-approval-queue-design.md  CONTRIBUTING.md  NSE_FILINGS_README.md  NSE_README.md  README.md  alembic.ini  docker-compose.yml  download_laurus.py  fetch_company_filings.py  nse_filings.py  nse_scraper.py  nse_simple.py  pyproject.toml
.clawhub/: lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backlog_item.md
.github/workflows/: ci.yml  migration-tests.yml
.learnings/: LEARNINGS.md  PRODUCTION_READINESS_CHECKLIST.md  RESEARCH_PRODUCTION_READINESS.md  STATUS_UPDATE_2026-05-06.md
.openclaw/: workspace-state.json
agentos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/daily_briefing/: config.py  runner.py
agents/earnings_prep/: __init__.py  config.py  output.py  prompt.md  runner.py
agents/filings_classifier/: __init__.py  config.py  output.py  prompt.md  runner.py
agents/variance_analysis/: __init__.py  config.py  output.py  prompt.md  runner.py
agentsos_research/: 05_competitive_landscape.md
core/: __init__.py  exceptions.py
core/tools/: __init__.py  _runtime.py  get_catalysts.py  get_consensus.py  get_corporate_actions.py  get_drivers.py  get_thesis.py  query_companies.py  query_financials.py  schemas.py  search_filings.py
core/types/: __init__.py  compat.py  pydantic_schemas.py  sqlalchemy_models.py
core/utils/: __init__.py  fingerprint.py  logging.py  period.py
db/migrations/: README.md  env.py
db/roles/: grants.sql
db/seeds/: companies_seed.sql
docs/: daily-briefing-channel.md  excel-naming-convention.md
extraction/: __init__.py
ingestion/: __init__.py
logs/: 2026-05-05_token-usage.md
memory/: 2026-05-05-2000.md  2026-05-05-agent-couldn-t-generate-a-resp.md
modeling/: __init__.py
scripts/: backup.sh  backup_gdrive.sh  health_check.py  process_pdf_url.py  scheduler.py  setup_backup_cron.sh  test_e2e.py
tests/: test_core_models_smoke.py  test_excel_adapter.py  test_fingerprint_utils.py  test_migration_contract.py  test_period_utils.py  test_smoke.py
tokens/: tokens_20260506.csv
ui/: __init__.py  streamlit_app.py
(+40 files in other folders)
