[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "AgentOS MVP scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    # S-02: PDF extraction
    "pdfplumber>=0.10.0",
    "camelot-py[cv]>=0.11.0",
    # S-01: Scheduling
    "apscheduler>=3.10.4",
]

[tool.setuptools]
packages = ["agentos"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
